--- a/gmit/main.tex
+++ b/gmit/main.tex
@@ -19,7 +19,7 @@
 \maketitle
 
 \begin{abstract}
-Qunantum Computing
+ Computing has become the foundation to how we communicate , interpret data and push forward in society.Described traditional computing has been here since the early 1930s  and haven't cracked the next generation .While these issues may be considered discouraging , some of the many positive ,  achievable  use cases for the Fifth generation Computing.In this review I also examined the limitations/obstacles of factors that will disrupt the implementation of Quantum computing.These issues may be considered discouraging , some of many positive , achievable  use cases for fifth generation systems .
 
 \end{abstract}
 \begin{IEEEkeywords}
@@ -31,21 +31,27 @@ Qunantum Computing, classical computing, ready, mechanics.
 
 \subsection{A Brief History of Computing }
 
+Since the first  introduction to classical industry computing in the early 1930s computers are now devices so widely available ,  portable and powerful . In particular in the last decade research  labs are developing machines that on paper weren't possible .Computers are central to role in that transformation and push us forward from The Apollo Guidance Computer to Tim Berner lees World Wide Web connecting the world. 
 
-\subsection{Next  Generation and Current Limitations} \label{subsec:4g}
+\subsection{Next  Generation and Current Limitations} \label{subsec:Bits}
 
 
 \section{Next Generation}
 
 
 \subsection{The Definition of 	Quantum computing} \label{subsec:def5g}
+Quantum computing is the use of quantum phenomena such as superposition and entanglement to perform computation. Computers that perform quantum computations are known as quantum computers. The IBM Q System One  is the world's first-ever circuit-based commercial quantum computer, introduced by IBM in January of last year.  A colossal breakthrough for quantum physics as a whole 
 
-%\textsc{1) Calculations: }
-\subsubsection{Calculations}
+%\textsc{1) Cryptography: }
+\subsubsection{Cryptography}
+Quantum cryptography is the science of exploiting quantum mechanical properties to perform cryptographic tasks. The best known example of quantum cryptography is quantum key distribution which offers an information-theoretically secure solution to the key exchange problem. 
 
 
 %\textsc{2) Medical Fields: }
 \subsubsection{Medical Fields}
+
+
+Running searches on quantum computers could unfold looking through all possible molecules with unimaginable speed, drug target tests conducted in every potential cell model or in silico human tissues and networks in the shortest amount of time possible. This would open the gates to find the antidote to diseases we never dreamt about before: Alzheimer’s? Various types of cancer? The possibilities seem to become endless.
 
 
 %\textsc{3) Research and Development : }
@@ -56,13 +62,13 @@ Qunantum Computing, classical computing, ready, mechanics.
 
 
 \subsection{Transmons}
+A transmon is a type of superconducting charge qubit that was designed to have reduced sensitivity to charge noise. The transmon was developed by Robert J.
 
-
-\subsection{ Logic gates}\label{subsec: logicgates}
-
+\subsection{ Quantum Logic gates}\label{subsec:  Quantum logicgates}
+Quantum logic gate (or simply quantum gate) is a basic quantum circuit operating on a small number of qubits. They are the building blocks of quantum circuits, like classical logic gates are for conventional digital circuits.
 
 \subsection{Qubits}
-
+In quantum computing, a qubit or quantum bit is the basic unit of quantum information—the quantum version of the classical binary bit physically realized with a two-state device. A qubit is a two-state quantum-mechanical system, one of the simplest quantum systems displaying the peculiarity of quantum mechanics.
 
 \subsection{energy}\label{subsec:energy}
 
@@ -71,28 +77,35 @@ Qunantum Computing, classical computing, ready, mechanics.
 \section{The Future of Quantum Computing }
 
 
+Having pondered the issues of current classic computing  and possible solutions using new technologies for Quantum Computing systems , the next natural step is to look at the possible future of Quantum Computing . One must weigh up the obvious and hidden problems facing Computing, as well as its likely use cases.
+
+
 \subsection{Problems Facing Quantum Computing }
 
 
-\subsubsection{Technological limatations  }
+\subsubsection{Technological limitations  }
 %\textsc{1) Technological limatation: }
-
+It may take many more years before such computers are generally affordable outside of large government agencies.
 
 %\textsc{2) Infrastructure: }
 \subsubsection{Infrastructure}
 
 
+While Quantum technologies will continue to require extensive funding for both research and development 
 \subsection{Possible Use Cases}
-
+In a world where Big Data becomes more sophisticated 
 
 \subsubsection{In Day-to-Day  Life}
 
 
 \subsubsection{The Bigger Picture}
+Considering quantum computing   advantages over classical computer systems. 
+In Research labs  , one large  obvious advantage of Quantum Computing is the potential to carry out calculations with  Data for improved healthcare
+experiences and results .
 
 
 \section{Conclusion}
-
+The way we communicate and incorporate technology into both our personal lives and wider society is changing greatly with each passing year.While the technologies mentioned in this review have shown considerable potential , but there is yet much research and landmarks to overcome before Quantum computing becomes a reality for consumers and developers.
 
 \bigskip
 \bigskip
